segundo cambio que barbaridad

--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1> 
                 VIVA BEATRIZ PINZON
             </h1>
+            <h2>
+                Abajo don Armandoooo
+            </h2>
         </div>
     </body>
 </html>
